<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="10dp">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".Login">

        <ImageView
            android:id="@+id/login_iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:maxWidth="125dp"
            android:scaleType="fitCenter"
            android:src="@drawable/billy_logo" />

        <TextView
            android:id="@+id/login_tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/dark_grey"
            android:gravity="center"
            android:text="Zu deinen Kontoställen? Fertig? Los."
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@color/yellow"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColorHint="@color/light_grey" />

        <EditText
            android:id="@+id/login_et_passwort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@color/yellow"
            android:hint="@string/passwort"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColorHint="@color/light_grey" />

        <ProgressBar
            android:id="@+id/login_pb_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/login_btn_goto_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:text="Neu hier? Registrieren."
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_room_linlay_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_room_linlay_nav_top"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startscreen_btn_nav_services"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Leistungen"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/startscreen_btn_nav_faq"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="FA''KUH''"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/startscreen_btn_nav_contact"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Kontakt"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_room_linlay_nav_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startscreen_btn_nav_datasecurity"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Datenschutz"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/startscreen_btn_nav_impress"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Impressum"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>