<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="10dp">

    <ScrollView
        android:id="@+id/startscreen_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/registration_linlay_nav"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".Registration">

            <ImageView
                android:id="@+id/registration_iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:adjustViewBounds="true"
                android:background="?android:attr/selectableItemBackground"
                android:maxWidth="125dp"
                android:scaleType="fitCenter"
                android:src="@drawable/billy_logo" />

            <TextView
                android:id="@+id/registration_tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="Neu hier?"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/registration_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/yellow"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorHint="@color/light_grey" />

            <EditText
                android:id="@+id/registration_et_passwort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/yellow"
                android:hint="@string/passwort"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorHint="@color/light_grey" />

            <EditText
                android:id="@+id/registration_et_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/yellow"
                android:hint="@string/display_name"
                android:layout_marginVertical="5dp"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorHint="@color/light_grey" />

            <ProgressBar
                android:id="@+id/registration_pb_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/registration_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/registration"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/registration_tv_goto_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow"
                android:text="Schon registriert? Hier einloggen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registration_tv_advertisement_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Ausgaben unter Freunden."
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/registration_linlay_advertisement_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/registration_tv_advertisement_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EINFACH"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_tv_advertisement_2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_tv_advertisement_2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FAIR"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_tv_advertisement_2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_tv_advertisement_2_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="VERWALTEN"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_tv_advertisement_2_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:padding="5dp"
                android:id="@+id/registration_tv_slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textSize="16sp"
                android:text="Werbe_Slogan" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/registration_linlay_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/registration_linlay_nav_top"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registration_btn_nav_services"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Leistungen"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/registration_btn_nav_faq"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="FA''KUH''"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/registration_btn_nav_contact"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Kontakt"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registration_linlay_nav_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registration_btn_nav_datasecurity"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Datenschutz"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/registration_btn_nav_impress"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="Impressum"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>